# quick-suite-claws

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  security.yml
api/: openapi.yaml
cdk.out/: ClawsGatewayStack.assets.json  ClawsGatewayStack.metadata.json  ClawsGatewayStack.template.json  ClawsGuardrailsStack.assets.json  ClawsGuardrailsStack.metadata.json  ClawsGuardrailsStack.template.json  ClawsPolicyStack.assets.json  ClawsPolicyStack.metadata.json  ClawsPolicyStack.template.json  ClawsSchedulerStack.assets.json  ClawsSchedulerStack.metadata.json  ClawsSchedulerStack.template.json  ClawsStorageStack.assets.json  ClawsStorageStack.metadata.json  ClawsStorageStack.template.json  ClawsToolsStack.assets.json  ClawsToolsStack.metadata.json  ClawsToolsStack.template.json  manifest.json  tree.json
cdk.out/asset.3bc80bf07eefc5559d9f88bf0ed446d59387215fdddde3d2814cbbd60dbb0116/tools/: errors.py
cdk.out/asset.b659291fc9c1f4aebd69905e08062136a39108b15dc16afbad24541579461c73/tools/: conftest.py
docs/: architecture.md  capstone-deployment.md  compliance.md  getting-started.md  mcp-integration.md  quick-suite-integration.md  safety-model.md  user-guide.md
examples/document-mining/: README.md
examples/genomics-excavation/: README.md
examples/log-analysis/: README.md
examples/noaa-station-query/: README.md  scenario.yaml
guardrails/base/: content-filters.json  injection-detection.json  pii-entities.json
guardrails/ferpa/: ferpa_guardrail.json
guardrails/tenants/: financial-data.json  genomics-research.json
infra/agentcore/: gateway-config.yaml
infra/cdk/: app.py
infra/cdk/stacks/: gateway_stack.py  guardrails_stack.py  policy_stack.py  scheduler_stack.py  storage_stack.py  tools_stack.py
policies/: default.cedar
policies/examples/: research-team.cedar  restricted-dataset.cedar
policies/templates/: approved-domains-only.cedar  no-pii-export.cedar  phi-approved.cedar  read-only.cedar
tools/: conftest.py  shared.py
tools/approve_plan/: handler.py
tools/audit_export/: handler.py
tools/discover/: handler.py
tools/discover/tests/: test_handler.py
tools/excavate/: handler.py
tools/excavate/executors/: athena.py  dynamodb.py  opensearch.py  postgres.py  redshift.py  s3_select.py
tools/excavate/tests/: test_executors.py  test_handler.py
tools/export/: handler.py
tools/instantiate_plan/: handler.py
tools/mcp/: client.py  registry.py
tools/plan/: handler.py
tools/probe/: handler.py
tools/recall/: handler.py
tools/refine/: handler.py
tools/remember/: handler.py
tools/tests/: test_export_quicksight.py  test_new_award_watch.py  test_pipeline.py  test_shared.py  test_v08_feed_materialization.py  test_v09_drift_detection.py  test_v10_collaboration.py  test_v11_compliance.py  test_v12_column_access.py  test_v13_security.py  test_v14_features.py  test_v14_security.py  test_v15_completion.py  test_v16_watches.py  test_v17_memory.py  test_v18_backend_coverage.py
tools/watch/: handler.py  runner.py
tools/watches/: handler.py
(+51 files in other folders)
