[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claws"
version = "0.2.0"
description = "Controlled excavation tools for agents on Amazon Bedrock AgentCore"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    {name = "Scott Friedman"},
]

dependencies = [
    "boto3>=1.34",
    "opensearch-py>=2.4",
    "requests-aws4auth>=1.2",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest-substrate @ file:///Users/scttfrdmn/src/substrate/python",
]

cdk = [
    "aws-cdk-lib>=2.150.0",
    "constructs>=10.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*"]

[tool.pytest.ini_options]
testpaths = ["tools"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tools.*.tests.*", "tools.conftest"]
disallow_untyped_defs = false
